--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mighty Ducks Hockey League</title>
 </head>
+
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <img src="Logo_Mighty_ducks-01.png" alt="Logo" width="100">
-
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="./About.html">About MDHL</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
     </header>
-
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a href="./contact.html">Contact</a>
+    </nav>
     <main>
-
-        <img src="hockey_3.jpg" alt="hockey_3" width="300">
+        <figure>
+            <img src="hockey_3.jpg" alt="hockey_3" width="300">
+        </figure>
 
         <div>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
@@ -28,7 +29,6 @@
         </div>
 
     </main>
+</body>
 
-
-    </body>
-    </html>
+</html>
