--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mighty Ducks Hockey League</title>
 </head>
+
 <body>
-    
+
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <img src="Logo_Mighty_ducks-01.png" alt="Logo" width="100">
-
+    </header>
+    <main>
         <nav>
             <a href="./index.html">Home</a>
-            <a href="./About.html">About MDHL</a>
+            <a href="./about.html">About MDHL</a>
             <a href="./contact.html">Contact</a>
         </nav>
-    </header>
-       <main>
-            <h2>Upcoming Events</h2>
+
+        <figure>
             <img src="hockey_1.jpg" alt="hockey_1" width="300">
-            <h3>August 4</h3>
-            <p>MDSL Fundraiser</p>
-            <h3>August 16</h3>
-            <p>Season Kick-off: Meet the Teams</p>
-            <h3>September 1</h3>
-            <p>First Game of the Season (Check Game Schedule for details)</p>
-        </main>
-    
+        </figure>
+
+        <section>
+            <h2>Upcoming Events</h2>
+
+            <article>
+                <h3>August 4</h3>
+                <p>MDSL Fundraiser</p>
+                <h3>August 16</h3>
+                <p>Season Kick-off: Meet the Teams</p>
+                <h3>September 1</h3>
+                <p>First Game of the Season (Check Game Schedule for details)</p>
+            </article>
+        </section>
+
+
+    </main>
+
 </body>
+
 </html>
