Hice cambios en index, about y contact

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
-        <img src="Logo_Mighty_ducks-01.png" alt="Logo" width="100">
+        <img src="imagenes/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -20,7 +20,7 @@
     </nav>
     <main>
         <figure>
-            <img src="hockey_3.jpg" alt="hockey_3" width="300">
+            <img src="imagenes/hockey_3.jpg" alt="hockey_3" width="300">
         </figure>
 
         <div>
