--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
-        <img src="imagenes/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
+        <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
 
     </header>
 
@@ -24,7 +24,7 @@
         </nav>
 
         <figure>
-            <img src="imagenes/hockey_2.jpg" alt="hockey_2" width="300">
+            <img src="assets/img/hockey_2.jpg" alt="hockey_2" width="300">
         </figure>
 
 
