--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <h1>Mighty Ducks Hockey League</h1>
-        <img src="imagenes/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
+        <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
     </header>
     <main>
         <nav>
@@ -22,7 +22,7 @@
         </nav>
 
         <figure>
-            <img src="imagenes/hockey_1.jpg" alt="hockey_1" width="300">
+            <img src="assets/img/hockey_1.jpg" alt="hockey_1" width="300">
         </figure>
 
         <section>
