cambio de carpeta

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/img/ducks_icon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/style1.css">
-    <link rel="stylesheet" href="./styles/style2.css">
-    <link rel="stylesheet" href="./styles/style3.css">
+    <!-- <link rel="stylesheet" href="./styles/style2.css">
+    <link rel="stylesheet" href="./styles/style3.css"> -->
 
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
-
+    <figure></figure>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
