--- a/contact.html
+++ b/contact.html
@@ -5,28 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style1.css">
-    <!-- <link rel="stylesheet" href="./styles/style2.css">
-    <link rel="stylesheet" href="./styles/style3.css"> -->
+    <link rel="stylesheet" href="./assets/styles/style1.css">
+    <link rel="stylesheet" href="./assets/styles/style2.css">
+    <link rel="stylesheet" href="./assets/styles/style3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
-        <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
+        <div class="banner">
+            <div class="logo">
+                <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
+            </div>
+            <h1>Mighty Ducks Hockey League</h1>
+
+        </div>
     </header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
-    </nav>
+
     <main>
-        <figure>
+        <!-- <figure>
             <img src="assets/img/hockey_3.jpg" alt="hockey_3" width="300">
-        </figure>
+        </figure> -->
 
         <div>
+            <h2>Contact</h2>
+            <nav>
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About MDHL</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
         </div>
