--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/img/ducks_icon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./styles/style1.css">
-    <!-- <link rel="stylesheet" href="./styles/style2.css">
-    <link rel="stylesheet" href="./styles/style3.css"> -->
+    <link rel="stylesheet" href="./assets/styles/style1.css">
+    <link rel="stylesheet" href="./assets/styles/style2.css">
+    <link rel="stylesheet" href="./assets/styles/style3.css">
 
     <title>Mighty Ducks Hockey League</title>
 </head>
 
-<body>
-    <figure></figure>
-    <header>
-        <h1>Mighty Ducks Hockey League</h1>
-        <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
-    </header>
-    <main>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="./about.html">About MDHL</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
 
-        <figure>
+<body>
+
+    <header>
+        <div class="banner">
+            <div class="logo">
+                <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
+            </div>
+            <h1>Mighty Ducks Hockey League</h1>
+
+        </div>
+    </header>
+
+    <main>
+        <!-- <figure>
             <img src="assets/img/hockey_1.jpg" alt="hockey_1" width="300">
-        </figure>
+        </figure> -->
 
         <section>
             <h2>Upcoming Events</h2>
 
+            <nav>
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About MDHL</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
             <article>
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>
