style1 terminado (por ahora)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="banner">
             <div class="logo">
-                <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
+                <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="150">
             </div>
             <h1>Mighty Ducks Hockey League</h1>
 
@@ -34,12 +34,13 @@
         <section>
             <h2>Upcoming Events</h2>
 
-            <nav>
-                <a href="./index.html">Home</a>
-                <a href="./about.html">About MDHL</a>
-                <a href="./contact.html">Contact</a>
-            </nav>
-            <article>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About MDHL</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+
+            <article class="fecha-evento">
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>
                 <h3>August 16</h3>
