--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/img/ducks_icon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/styles/style1.css">
     <link rel="stylesheet" href="./assets/styles/style2.css">
     <link rel="stylesheet" href="./assets/styles/style3.css">
@@ -15,7 +16,7 @@
     <header>
         <div class="banner">
             <div class="logo">
-                <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="100">
+                <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="150">
             </div>
             <h1>Mighty Ducks Hockey League</h1>
 
@@ -29,13 +30,16 @@
 
         <div>
             <h2>Contact</h2>
-            <nav>
-                <a href="./index.html">Home</a>
-                <a href="./about.html">About MDHL</a>
-                <a href="./contact.html">Contact</a>
-            </nav>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-            <p>We reply to your email as soon as we can.</p>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About MDHL</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+            <article class="contact">
+                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                <p>We reply to your email as soon as we can.</p>
+
+            </article>
         </div>
 
     </main>
