--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/img/ducks_icon.ico" type="image/x-icon" />
-    <!-- <link rel="stylesheet" href="./assets/styles/style1.css"> -->
+    <link rel="stylesheet" href="./assets/styles/style1.css">
     <link rel="stylesheet" href="./assets/styles/style2.css">
     <link rel="stylesheet" href="./assets/styles/style3.css">
     <title>Mighty Ducks Hockey League</title>
