--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/img/ducks_icon.ico" type="image/x-icon" />
+    <link rel="icon" href="assets/img/ducks_icon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./assets/styles/style1.css"> 
     <link rel="stylesheet" href="./assets/styles/style2.css">  -->
     <link rel="stylesheet" href="./assets/styles/style3.css">
@@ -13,33 +13,42 @@
     <title>Mighty Ducks Hockey League</title>
 </head>
 
-
 <body>
+    <!--Nav main-->
+
+    <nav class="nav_main">
+        <ul class="nav_links">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About MDHL</a></li>
+            <li><a href="./game_info.html">Game Information</a></li>
+            <li><a href="./rules.html">Rules & Policies</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <img class="logo" src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="150">
+
+    <!--Header-->
 
     <header>
-        <div class="banner">
-            <div class="logo">
-                <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="150">
-            </div>
+        <div class="header_content">
             <h1>Mighty Ducks Hockey League</h1>
         </div>
     </header>
 
+    <!--Upcoming  Events-->
+
     <main>
-        <!-- <figure>
-            <img src="assets/img/hockey_1.jpg" alt="hockey_1" width="300">
-        </figure> -->
+
+        <figure>
+            <img src="assets/img/hockey_1.jpg" alt="hockey_1" width="650">
+        </figure>
 
         <section>
-            <h2>Upcoming Events</h2>
+            <div class="events">
+                <h2>UPCOMING EVENTS</h2>
+            </div>
 
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About MDHL</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-
-            <article class="fecha-evento">
+            <article class="event_dates">
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>
                 <h3>August 16</h3>
