--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/img/ducks_icon.ico" type="image/x-icon" />
+    <link rel="icon" href="assets/img/ducks_icon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./assets/styles/style1.css"> 
     <link rel="stylesheet" href="./assets/styles/style2.css">  -->
     <link rel="stylesheet" href="./assets/styles/style3.css">
@@ -13,29 +13,39 @@
 </head>
 
 <body>
-    <header>
-        <div class="banner">
-            <div class="logo">
-                <img src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="150">
-            </div>
-            <h1>Mighty Ducks Hockey League</h1>
+    <!--Nav main-->
 
+    <nav class="nav_main">
+        <ul class="nav_links">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About MDHL</a></li>
+            <li><a href="./game_info.html">Game Information</a></li>
+            <li><a href="./rules.html">Rules & Policies</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <img class="logo" src="assets/img/Logo_Mighty_ducks-01.png" alt="Logo" width="150">
+
+    <!--Header-->
+
+    <header>
+        <div class="header_content">
+            <h1>Mighty Ducks Hockey League</h1>
         </div>
     </header>
 
-    <main>
-        <!-- <figure>
-            <img src="assets/img/hockey_3.jpg" alt="hockey_3" width="300">
-        </figure> -->
+    <!--Contact-->
 
-        <div>
-            <h2>Contact</h2>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About MDHL</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-            <article class="contact">
+    <main>
+        <figure class="hockey3">
+            <img src="assets/img/hockey_3.jpg" alt="hockey_3" width="650">
+        </figure>
+
+
+        <div class="contact">
+            <h2>CONTACT</h2>
+
+            <article class="contact1">
                 <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                 <p>We reply to your email as soon as we can.</p>
 
