Ultimas modificaciones a game_info

--- a/game_info.html
+++ b/game_info.html
@@ -121,10 +121,18 @@
 
             <div class="info_data">
                 <p><strong>Please direct all questions to:</strong> Michael Randall, League Coordinator</p>
-                <p><strong>Phone:</strong><a href="tel:6306908132">(630) 690-8132</a></p>
-                <p><strong>Email:</strong><a
-                        href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
             </div>
+
+            <div class="flex_container">
+                <div>
+                    <p><strong>Phone:</strong><a href="tel:6306908132">(630) 690-8132</a></p>
+                </div>
+                <div>
+                    <p><strong>Email:</strong><a
+                            href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
+                </div>
+            </div>
+
 
         </section>
 
