--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="./about.html">About MDHL</a></li>
             <li><a href="./game_info.html">Game Information</a></li>
             <li><a href="./rules.html">Rules & Policies</a></li>
+            <li><a href="./registration.html">Registration</a></li>
             <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
