trabajé en el estilo de registration y game-info

--- a/game_info.html
+++ b/game_info.html
@@ -112,31 +112,58 @@
             </tbody>
         </table>
 
-        <section>
-            <div class="outdoor">
-                <p><strong>Facility Type:</strong> Outdoor</p>
-                <p><strong>Additional Information:</strong>If deemed necessary by MDHL games may be shortenes
-                    or cancelled due to extreme weather conditions.</p>
+        <div class="maps">
+            <h4>Maps/Directions</h4>
 
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4994.394509928476!2d-87.63231873748684!3d41.89963659619928!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses-419!2sar!4v1675711367766!5m2!1ses-419!2sar"
+                width="400" height="300" style="border:5;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4198.8552570432375!2d-87.6407376739141!3d41.913519779185116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses-419!2sar!4v1675712595502!5m2!1ses-419!2sar"
+                width="400" height="300" style="border:5;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698766737694!2d-87.85606978516932!3d42.31544224591186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675712633325!5m2!1ses-419!2sar"
+                width="400" height="300" style="border:5;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.289653643584!2d-87.64816138518344!3d41.929626870168214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1675712684934!5m2!1ses-419!2sar"
+                width="400" height="300" style="border:5;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47407.115372423024!2d-87.91632347329083!3d42.04436592027319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fb793e8d23749%3A0xbdd4da26438cf3a0!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1675712718541!5m2!1ses-419!2sar"
+                width="400" height="300" style="border:5;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2964.0704497392862!2d-87.88823348518011!3d42.02022106448838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fb7ad3c474b63%3A0x93bdf85af2a839ed!2sSOUTH%20ELEMENTARY%20SCHOOL!5e0!3m2!1ses-419!2sar!4v1675712938993!5m2!1ses-419!2sar"
+                width="400" height="300" style="border:5;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+        </div>
+
+
+        <div class="outdoor">
+            <p><strong>Facility Type:</strong> Outdoor</p>
+            <p><strong>Additional Information:</strong>If deemed necessary by MDHL games may be shortenes
+                or cancelled due to extreme weather conditions.</p>
+
+        </div>
+
+        <div class="info_data">
+            <p><strong>Please direct all questions to:</strong> Michael Randall, League Coordinator</p>
+        </div>
+
+        <div class="flex_container">
+            <div>
+                <p><strong>Phone:</strong><a href="tel:6306908132">(630) 690-8132</a></p>
             </div>
-
-            <div class="info_data">
-                <p><strong>Please direct all questions to:</strong> Michael Randall, League Coordinator</p>
+            <div>
+                <p><strong>Email:</strong><a
+                        href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
             </div>
-
-            <div class="flex_container">
-                <div>
-                    <p><strong>Phone:</strong><a href="tel:6306908132">(630) 690-8132</a></p>
-                </div>
-                <div>
-                    <p><strong>Email:</strong><a
-                            href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
-                </div>
-            </div>
-
-
-        </section>
-
+        </div>
     </main>
 </body>
 
