Corregí errores de validación

--- a/contact.html
+++ b/contact.html
@@ -45,14 +45,11 @@
 
         <div class="contact">
             <h2>CONTACT</h2>
-
-            <article class="contact1">
-                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                <p>We reply to your email as soon as we can.</p>
-
-            </article>
         </div>
-
+        <div class="contact1">
+            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+            <p>We reply to your email as soon as we can.</p>
+        </div>
     </main>
 </body>
 
