--- a/rules.html
+++ b/rules.html
@@ -52,7 +52,7 @@
                     team, parent, spectator, administrator or referee whose behavior detracts from
                     this purpose is subject to disciplinary action regardless of technical hockey
                     background, expertise, accomplishments or standing.</dd>
-                </dt>
+
             </dl>
 
             <h4>IHF FIELD REGULATIONS</h4>
@@ -86,7 +86,7 @@
                 fifty percent of each game. Coaches in the competition program are encouraged
                 to play their players 50% of each game.</p>
             <ul>
-                <li type="circle">A Coach shall be permitted to not play a player 50% of each game
+                <li class="circle">A Coach shall be permitted to not play a player 50% of each game
                     under special circumstances, e.g., unexcused absences from practice
                     and/or games, ungentlemanly conduct at practice and/or games, and
                     injuries.</li>
